--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1,5 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Asap&display=swap");
+
+* {
+  box-sizing: border-box;
+}
+
 html,
 body {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
+  font-family: "Asap", sans-serif;
 }
